# ONNX-Static-Example

./: .gitignore  CMakeLists.txt  README.md  onnx_test.cpp
include/: README.md
lib/: README.md
model/: model.onnx  model.onnx.c  model.onnx.h  model.ort.c
